--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "node-red-node-cf-cloudant": "0.x",
         "node-red-node-openwhisk": "0.x",
         "node-red-node-watson": "0.x",
-        "node-red-nodes-cf-sqldb-dashdb": "0.x"
+        "node-red-nodes-cf-sqldb-dashdb": "0.x",
+        "node-red-contrib-chatbot": "0.18.15"
     },
     "scripts": {
         "start": "node --max-old-space-size=160 index.js --settings ./bluemix-settings.js -v"
