chore: add missing files and package

--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
     "name": "node-red-app",
     "version": "1.1.1",
     "dependencies": {
-        "@cloudant/cloudant": "^4.2.2",
-        "bcrypt": "^3.0.7",
+        "@cloudant/cloudant": "^4.2.4",
+        "bcrypt": "^5.0.0",
         "body-parser": "1.x",
-        "cfenv": "^1.2.2",
+        "cfenv": "^1.2.3",
+        "ibm-cloud-env": "^0",
         "express": "4.x",
         "http-shutdown": "1.2.2",
         "node-red": "1.x",
