--- a/Dockerfile-tools
+++ b/Dockerfile-tools
@@ -1,7 +1,7 @@
 FROM registry.access.redhat.com/ubi8/ubi
 
 RUN curl -sL https://rpm.nodesource.com/setup_12.x | bash -
-RUN yum install -y nodejs
+RUN yum install -y nodejs make gcc-c++
 
 ENV PORT 3000
 ENV NODE_HEAPDUMP_OPTIONS nosignal
