--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,9 +18,5 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
-    - run: npm run lint
-    - run: npm run test
-    - run: npm run check-coverage
-      env:
-        CI: true
+    - run: npm start
     - run: scripts/experience_test.sh
