--- a/package.json
+++ b/package.json
@@ -1,22 +1,42 @@
 {
     "name": "node-red-app",
     "version": "1.1.2",
-    "dependencies": {
-        "@cloudant/cloudant": "^4.2.4",
-        "bcrypt": "^5.0.0",
-        "body-parser": "1.x",
-        "ibm-cloud-env": "^0",
-        "express": "4.x",
-        "http-shutdown": "1.2.2",
-        "node-red": "1.x",
-        "node-red-node-cf-cloudant": "0.x",
-        "node-red-node-openwhisk": "0.x",
-        "node-red-node-watson": "0.x",
-        "node-red-nodes-cf-sqldb-dashdb": "0.x",
-        "node-red-contrib-ibm-db2": "0.x"
-    },
     "scripts": {
-        "start": "node --max-old-space-size=160 index.js --settings ./bluemix-settings.js -v"
+      "start": "node --max-old-space-size=160 index.js --settings ./bluemix-settings.js -v",
+      "test": "nyc mocha test --recursive --exit"
+    },
+    "nyc": {
+      "check-coverage": true,
+      "per-file": true,
+      "lines": 100,
+      "statements": 100,
+      "functions": 100,
+      "branches": 100,
+      "exclude": [
+        "test"
+      ],
+      "reporter": [
+        "lcov",
+        "text-summary"
+      ]
+    },
+    "dependencies": {
+      "@cloudant/cloudant": "^4.2.4",
+      "bcrypt": "^5.0.0",
+      "body-parser": "1.x",
+      "ibm-cloud-env": "^0",
+      "express": "4.x",
+      "http-shutdown": "1.2.2",
+      "node-red": "1.x",
+      "node-red-node-cf-cloudant": "0.x",
+      "node-red-node-openwhisk": "0.x",
+      "node-red-node-watson": "0.x",
+      "node-red-nodes-cf-sqldb-dashdb": "0.x",
+      "node-red-contrib-ibm-db2": "0.x"
+    },
+    "devDependencies": {
+      "mocha": "^8.1.3",
+      "nyc": "^15.1.0"
     },
     "engines": {
         "node": "12.x"
