--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,4 +18,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
-    - run: npm run test
+    - run: nohup bash -c "npm start 2>&1 &" && sleep 5
+    - run: cat nohup.out
+    - run: scripts/experience_test.sh
