fix: bash execute

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,4 +20,4 @@ jobs:
     - run: npm install
     - run: nohup bash -c "npm start 2>&1 &" && sleep 5
     - run: cd scripts
-    - run: experience_test.sh
+    - run: ./experience_test.sh
