--- a/package.json
+++ b/package.json
@@ -35,8 +35,13 @@
       "node-red-contrib-ibm-db2": "0.x"
     },
     "devDependencies": {
+      "chai": "^4.2.0",
+      "chai-as-promised": "^7.1.1",
       "mocha": "^8.1.3",
-      "nyc": "^15.1.0"
+      "nyc": "^15.1.0",
+      "sinon": "^9.0.3",
+      "sinon-chai": "^3.5.0",
+      "supertest": "^4.0.2"
     },
     "engines": {
         "node": "12.x"
