--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,4 +18,4 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
-    - run: npm run test
+    - run: scripts/curl_test.sh
