--- a/package.json
+++ b/package.json
@@ -2,19 +2,7 @@
   "name": "node-red-app",
   "version": "1.1.2",
   "scripts": {
-    "start": "node --max-old-space-size=160 index.js --settings ./bluemix-settings.js -v",
-    "test": "nyc mocha test --recursive --exit"
-  },
-  "nyc": {
-    "check-coverage": true,
-    "per-file": true,
-    "exclude": [
-      "test"
-    ],
-    "reporter": [
-      "lcov",
-      "text-summary"
-    ]
+    "start": "node --max-old-space-size=160 index.js --settings ./bluemix-settings.js -v"
   },
   "dependencies": {
     "@cloudant/cloudant": "^4.2.4",
@@ -29,15 +17,6 @@
     "node-red-node-watson": "0.x",
     "node-red-nodes-cf-sqldb-dashdb": "0.x",
     "node-red-contrib-ibm-db2": "0.x"
-  },
-  "devDependencies": {
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
-    "mocha": "^8.1.3",
-    "nyc": "^15.1.0",
-    "sinon": "^9.0.3",
-    "sinon-chai": "^3.5.0",
-    "supertest": "^4.0.2"
   },
   "engines": {
     "node": "12.x"
