--- a/package.json
+++ b/package.json
@@ -2,23 +2,23 @@
     "name": "node-red-app",
     "version": "1.1.3",
     "dependencies": {
-        "@cloudant/cloudant": "^4.3.0",
-        "bcrypt": "^5.0.0",
+        "@cloudant/cloudant": "^4.3.1",
+        "bcrypt": "^5.0.1",
         "body-parser": "1.x",
-        "ibm-cloud-env": "^0",
         "express": "4.x",
         "http-shutdown": "1.2.2",
-        "node-red": "1.x",
+        "ibm-cloud-env": "^0",
+        "node-red": "^1.2.9",
+        "node-red-contrib-ibm-db2": "0.x",
         "node-red-node-cf-cloudant": "0.x",
         "node-red-node-openwhisk": "0.x",
         "node-red-node-watson": "0.x",
-        "node-red-nodes-cf-sqldb-dashdb": "0.x",
-        "node-red-contrib-ibm-db2": "0.x"
+        "node-red-nodes-cf-sqldb-dashdb": "0.x"
     },
     "scripts": {
         "start": "node --max-old-space-size=160 index.js --settings ./bluemix-settings.js -v"
     },
     "engines": {
-        "node": "12.x"
+        "node": "14.x"
     }
 }
