--- a/Dockerfile-tools
+++ b/Dockerfile-tools
@@ -1,16 +1,13 @@
-FROM registry.access.redhat.com/ubi8/ubi
-
-RUN curl -sL https://rpm.nodesource.com/setup_14.x | bash -
-RUN yum install -y nodejs make gcc-c++
+FROM registry.access.redhat.com/ubi8/nodejs-14:1
 
 ENV PORT 3000
 ENV NODE_HEAPDUMP_OPTIONS nosignal
 EXPOSE 3000
 EXPOSE 9229
 
-RUN mkdir /app
-WORKDIR /app
-COPY . /app
+RUN mkdir /opt/app-root/src
+WORKDIR /opt/app-root/src
+COPY . /opt/app-root/src
 
 CMD ["/bin/bash"]
 ARG bx_dev_user=root
