fix: bx dev build now works

--- a/Dockerfile-tools
+++ b/Dockerfile-tools
@@ -1,11 +1,11 @@
-FROM registry.access.redhat.com/ubi8/nodejs-14:1
+FROM node:14
 
 ENV PORT 3000
 ENV NODE_HEAPDUMP_OPTIONS nosignal
 EXPOSE 3000
 EXPOSE 9229
 
-RUN mkdir /opt/app-root/src
+RUN mkdir -p /opt/app-root/src
 WORKDIR /opt/app-root/src
 COPY . /opt/app-root/src
 
