fix: redhat nodejs image used

--- a/Dockerfile-tools
+++ b/Dockerfile-tools
@@ -1,4 +1,14 @@
-FROM node:14
+FROM registry.access.redhat.com/ubi8:8.4 as build
+
+RUN  dnf module install --nodocs -y nodejs:14 python39 --setopt=install_weak_deps=0 --disableplugin=subscription-manager \
+    && dnf install --nodocs -y make gcc gcc-c++  --setopt=install_weak_deps=0 --disableplugin=subscription-manager \
+    && dnf clean all --disableplugin=subscription-manager
+    
+RUN mkdir -p /opt/app-root/src
+WORKDIR /opt/app-root/src
+COPY package.json /opt/app-root/src
+RUN npm install --no-audit --no-update-notifier --no-fund --production
+COPY . .
 
 ENV PORT 3000
 ENV NODE_HEAPDUMP_OPTIONS nosignal
