--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "node-red-app",
     "version": "1.1.3",
     "dependencies": {
-        "@cloudant/cloudant": "^4.4.0",
+        "@ibm-cloud/cloudant": "^0.0.16",
         "bcrypt": "^5.0.1",
         "body-parser": "1.x",
         "express": "4.x",
