update npm to 8.15 in dockerfiles

--- a/Dockerfile-tools
+++ b/Dockerfile-tools
@@ -3,7 +3,8 @@ FROM registry.access.redhat.com/ubi8:8.6 as build
 RUN  dnf module install --nodocs -y nodejs:16 python39 --setopt=install_weak_deps=0 --disableplugin=subscription-manager \
     && dnf install --nodocs -y make gcc gcc-c++  --setopt=install_weak_deps=0 --disableplugin=subscription-manager \
     && dnf clean all --disableplugin=subscription-manager
-    
+RUN npm install --global npm@8.15.0
+
 RUN mkdir -p /opt/app-root/src
 WORKDIR /opt/app-root/src
 COPY package.json /opt/app-root/src
