--- a/package.json
+++ b/package.json
@@ -8,12 +8,7 @@
         "express": "4.x",
         "http-shutdown": "1.2.2",
         "ibm-cloud-env": "^0",
-        "node-red": "^2.2.2",
-        "node-red-contrib-ibm-db2": "0.x",
-        "node-red-node-cf-cloudant": "0.x",
-        "node-red-node-openwhisk": "0.x",
-        "node-red-node-watson": "0.x",
-        "node-red-nodes-cf-sqldb-dashdb": "0.x"
+        "node-red": "^3.0.2"
     },
     "scripts": {
         "start": "node --max-old-space-size=160 index.js --settings ./bluemix-settings.js -v"
